# ClimblingRobot_v2.0

CarTerminal/install/: local_setup.sh  setup.sh
CarTerminal/install/carterminal/lib/carterminal/: camera_talker_node  data_collect_node  wheel_talker_node
CarTerminal/install/carterminal/share/carterminal/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
CarTerminal/install/carterminal/share/carterminal/launch/: start_robot_launch.py
CarTerminal/install/fdilink_ahrs/lib/fdilink_ahrs/: ahrs_driver_node  imu_tf_node
CarTerminal/install/fdilink_ahrs/share/fdilink_ahrs/: local_setup.sh  package.sh
CarTerminal/install/ldlidar/lib/ldlidar/: stp23_ros2node  stp23l_ros2node  stp23lnet_ros2node
CarTerminal/install/ldlidar/share/ldlidar/: local_setup.sh  package.sh
CarTerminal/log/: latest_build
CarTerminal/src/carterminal/: CMakeLists.txt
CarTerminal/src/carterminal/launch/: start_robot_launch.py
CarTerminal/src/carterminal/src/: camera_talker_node.cpp  data_collect_node.cpp  readdata_talker_node.cpp  sensor_collect_node.cpp  wheel_talker_node.cpp
CarTerminal/src/fdilink_ahrs/launch/: ahrs_driver.launch.py
CarTerminal/src/fdilink_ahrs/src/: imu_tf.cpp
CarTerminal/src/ldlidar_driver/include/: cmd_net_interface_linux.h  lipkg.h
CarTerminal/src/ldlidar_driver/src/: cmd_net_interface_linux.cpp  lipkg.cpp
CarTerminal/src/ros2_app/src/ldlidar/: CMakeLists.txt
GroundTerminal/doc/: readme.md
GroundTerminal/install/: local_setup.sh  setup.ps1  setup.sh
GroundTerminal/install/groundterminal/lib/groundterminal/: remote_control
GroundTerminal/install/groundterminal/share/groundterminal/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
GroundTerminal/log/: latest_build
GroundTerminal/src/carterminal/: CMakeLists.txt  package.xml
GroundTerminal/src/carterminal/include/carterminal/: myconfig.h
GroundTerminal/src/carterminal/src/: car_candriver.cpp
GroundTerminal/src/groundterminal/: CMakeLists.txt
GroundTerminal/src/groundterminal/include/carterminal/: cansend.h  mode_switching.h
GroundTerminal/src/groundterminal/include/groundterminal/: cansend.h  mode_switching.h  myconfig.h
GroundTerminal/src/groundterminal/launch/: start_launch.py
GroundTerminal/src/groundterminal/src/: car_candriver.cpp  mode_switching.cpp  remote_control.cpp
USE_DOUBLE_IMU/: 3080612939wheeltec_udev.sh
USE_DOUBLE_IMU/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
USE_DOUBLE_IMU/install/double_imu/lib/double_imu/: yesense_node_publisher
USE_DOUBLE_IMU/install/double_imu/share/double_imu/: package.ps1  package.sh
USE_DOUBLE_IMU/install/to_euler/lib/to_euler/: to_euler_node
USE_DOUBLE_IMU/install/to_euler/share/to_euler/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
USE_DOUBLE_IMU/install/yesense_interface/share/yesense_interface/: package.ps1  package.sh  package.zsh
USE_DOUBLE_IMU/log/: latest_build
USE_DOUBLE_IMU/src/yesense_ros2_imu/install/: local_setup.sh  setup.sh
USE_DOUBLE_IMU/src/yesense_ros2_imu/log/: latest_build
USE_DOUBLE_IMU/src/yesense_ros2_imu/to_euler_point/to_euler/: CMakeLists.txt  package.xml
USE_DOUBLE_IMU/src/yesense_ros2_imu/yesense_std_ros2/: CMakeLists.txt  package.xml
USE_DOUBLE_IMU/src/yesense_ros2_imu/yesense_std_ros2/src/: yesense_node.cpp
(+271 files in other folders)
